http://jira.bytatech.com:8080/browse/IN-7338,http://jira.bytatech.com:8080/browse/IN-7377

--- a/MockExam/src/main/resources/text_en_IN.properties
+++ b/MockExam/src/main/resources/text_en_IN.properties
@@ -7,8 +7,13 @@ Save=SAVE
 Language=LANGUAGE
 Back=BACK
 Submit=SUBMIT
-OK=OK
+ok=OK
 UserName=USERNAME
 Password=PASSWORD
 Login=LOGIN
 MOCK-EXAM=MOCK-EXAM
+StartExam=Start-Exam
+Introduction=INSTRUCTION
+Next=Next
+Questions=QUESTIONS
+Confirm=Confirm
