--- a/MockExam/src/main/resources/text_mal_IN.properties
+++ b/MockExam/src/main/resources/text_mal_IN.properties
@@ -4,11 +4,16 @@ Edit=തിരുത്തുക
 Cancel= റദ്ദാക്കുക
 Save=പുതുതായിചേർക്കുക
 language=മലയാളം
-back=തിരിച്ചുപോവുക
+Back=തിരിച്ചുപോവുക
 Submit=സമർപ്പിക്കുക
-OK=ശരി
+ok=ശരി
 UserName=ഉപയോക്തൃനാമം
 Password=പാസ്വേഡ്
 Skip=ഒഴിവാക്കുക
 Login=ലോഗിൻ
 MOCK-EXAM=മോക്ക് പരീക്ഷ
+StartExam=പരീക്ഷ ആരംഭിക്കുക
+Introduction=ആമുഖം
+Next=അടുത്തത്
+Questions=ചോദ്യങ്ങൾ
+Confirm=സ്ഥിരീകരിക്കുക
