http://jira.bytatech.com:8080/browse/IN-7391

--- a/MockExam/src/main/resources/text_en_IN.properties
+++ b/MockExam/src/main/resources/text_en_IN.properties
@@ -16,4 +16,7 @@ StartExam=Start-Exam
 Introduction=INSTRUCTION
 Next=Next
 Questions=QUESTIONS
-Confirm=Confirm
+Confirm=CONFIRM
+Do_You_Want_To_Continue?="Do You Want To Continue"
+Passed=PASSED
+Failed=FAILED
