--- a/MockExam/src/main/resources/text_mal_IN.properties
+++ b/MockExam/src/main/resources/text_mal_IN.properties
@@ -17,3 +17,7 @@ Introduction=ആമുഖം
 Next=അടുത്തത്
 Questions=ചോദ്യങ്ങൾ
 Confirm=സ്ഥിരീകരിക്കുക
+Do_You_Want_To_Continue?="തുടരാൻ ആഗ്രഹിക്കുന്നുണ്ടോ?"
+Add=പുതിയത്ഉണ്ടാക്കുക
+Passed=വിജയിച്ചു
+Failed=പരാജയപ്പെട്ടു
