http://jira.bytatech.com:8080/browse/IN-7697

--- a/MockExam/src/main/resources/text_mal_IN.properties
+++ b/MockExam/src/main/resources/text_mal_IN.properties
@@ -17,3 +17,9 @@ Enter = നൽകുക
 Submit = സമർപ്പിക്കുക
 Reset = പുന സജ്ജമാക്കുക
 Instructions = നിർദ്ദേശങ്ങൾ
+English = ഇംഗ്ലീഷ്
+Malayalam = മലയാളം
+Password = പാസ്വേഡ്
+Failed = പരാജയപ്പെട്ടു
+Sorry = ക്ഷമിക്കണം
+CreateAccount = അക്കൗണ്ട് സൃഷ്ടിക്കുക
