--- a/MockExam/src/main/resources/text_mal_IN.properties
+++ b/MockExam/src/main/resources/text_mal_IN.properties
@@ -23,3 +23,4 @@ Password = പാസ്വേഡ്
 Failed = പരാജയപ്പെട്ടു
 Sorry = ക്ഷമിക്കണം
 CreateAccount = അക്കൗണ്ട് സൃഷ്ടിക്കുക
+WelcometoMockExam = മോക്ക് പരീക്ഷയിലേക്ക് സ്വാഗതം
