http://jira.bytatech.com:8080/browse/IN-7750

--- a/MockExam/src/main/resources/text_en_IN.properties
+++ b/MockExam/src/main/resources/text_en_IN.properties
@@ -24,3 +24,11 @@ Failed = Failed
 Sorry = Sorry
 CreateAccount = Create Account
 WelcometoMockExam = WELCOME TO MOCK EXAM
+Update = Update
+ViewQuestions = VIEW QUESTIONS
+EnterQuestion = ENTER QUESTIONS
+UpdateQuestion = UPDATE QUESTION
+DeleteQuestion = DELETE QUESTION
+StartExam = Start Exam
+MockExam = Mock Exam
+TestExam = Test Exam
