--- a/MockExam/src/main/resources/text_mal_IN.properties
+++ b/MockExam/src/main/resources/text_mal_IN.properties
@@ -24,3 +24,11 @@ Failed = പരാജയപ്പെട്ടു
 Sorry = ക്ഷമിക്കണം
 CreateAccount = അക്കൗണ്ട് സൃഷ്ടിക്കുക
 WelcometoMockExam = മോക്ക് പരീക്ഷയിലേക്ക് സ്വാഗതം
+Update = അപ്ഡേറ്റ് ചെയ്യുക
+ViewQuestions = ചോദ്യങ്ങൾ കാണുക
+EnterQuestion = ചോദ്യം നൽകുക
+UpdateQuestion = ചോദ്യം അപ്‌ഡേറ്റുചെയ്യുക
+DeleteQuestion = ചോദ്യം ഇല്ലാതാക്കുക
+StartExam = പരീക്ഷ ആരംഭിക്കുക
+MockExam = മോക്ക് പരീക്ഷ
+TestExam = ടെസ്റ്റ് പരീക്ഷ
