http://jira.bytatech.com:8080/browse/IN-7895,http://jira.bytatech.com:8080/browse/IN-7849

--- a/mockexam/src/main/resources/text_mal_IN.properties
+++ b/mockexam/src/main/resources/text_mal_IN.properties
@@ -5,21 +5,25 @@ password=പാസ്വേഡ്
 cancel=റദ്ദാക്കുക
 sign=സൈൻ അപ്പ് 
 mock=മോക്ക് പരീക്ഷ
-choose=തിരഞ്ഞെടുക്കുക
+choose=നിങ്ങളുടെ ഓപ്ഷൻ തിരഞ്ഞെടുക്കുക
 add=ചേർക്കുക
 delete=ഇല്ലാതാക്കുക
 update=അപ്ഡേറ്റ് 
-diaplay=പ്രദർശിപ്പിക്കുക
+display=പ്രദർശിപ്പിക്കുക
 back=മടങ്ങുക
+welcome=മോക്ക് പരീക്ഷയിലേക്ക് സ്വാഗതം
 welcomeAdd=ആഡ്‌പേജിലേക്ക് സ്വാഗതം
 question=ചോദ്യം
 opt1=ഓപ്ഷൻ 1
 opt2=ഓപ്ഷൻ 2
 opt3=ഓപ്ഷൻ 3
 opt4=ഓപ്ഷൻ 4
+ans=ഉത്തര നമ്പർ
 done=ചെയ്‌തു
 welcomedelt=ഇല്ലാതാക്കൽ പേജിലേക്ക് സ്വാഗതം
 welcomeupd=അപ്‌ഡേറ്റ് പേജിലേക്ക് സ്വാഗതം
 welcomediply=ഡിസ്പ്ലേ പേജിലേക്ക് സ്വാഗതം
 signup=സൈൻ അപ്പ് 
 next=അടുത്തത്
+qns=ചോദ്യം വിജയകരമായി ചേർത്തു
+dts=ചോദ്യം വിജയകരമായി ഇല്ലാതാക്കി
