--- a/mockexam/src/main/resources/text_en_IN.properties
+++ b/mockexam/src/main/resources/text_en_IN.properties
@@ -9,17 +9,21 @@ choose=choose your option
 add=ADD
 delete=DELETE
 update=UPDATE
-diaplay=DISPLAY
+display=DISPLAY
 back=BACK
+welcome=welcome to mockexam
 welcomeAdd=Welcome to Add Page
 question=Question
 opt1=Option 1
 opt2=Option 2
 opt3=Option 3
 opt4=Option 4
+ans=Answer no
 done=DONE
 welcomedelt=Welcome to Delete Page
 welcomeupd=Welcome to Update Page
 welcomediply=Welcome to Display Page
 signup=Signup
 next=NEXT
+qns=Question successfully added
+dts=Qestion successfully deleted
