http://jira.bytatech.com:8080/browse/IN-7943,http://jira.bytatech.com:8080/browse/IN-7897

--- a/mockexam/src/main/resources/text_en_IN.properties
+++ b/mockexam/src/main/resources/text_en_IN.properties
@@ -11,7 +11,7 @@ delete=DELETE
 update=UPDATE
 display=DISPLAY
 back=BACK
-welcome=welcome to mockexam
+welcome=Welcome To Mockexam
 welcomeAdd=Welcome to Add Page
 question=Question
 opt1=Option 1
@@ -27,3 +27,15 @@ signup=Signup
 next=NEXT
 qns=Question successfully added
 dts=Qestion successfully deleted
+ns1=Entered username already exists
+ns2=please try another one
+i1=Read The Instructions Below
+i2=You Have got 10 Minutes to complete the exam
+i3=do not use mobile phone without the permission of invigilator
+i4=read the questions carefully and select the answer given below
+i5=you can ask as many papers from the invigilator as you wish
+i6=any malpractice will lead to debar
+time=remaining seconds
+r1=You Have Successfully Completed The Mock Exam
+r2=Your Score
+r3=Have A Good Day
