--- a/mockexam/src/main/resources/text_mal_IN.properties
+++ b/mockexam/src/main/resources/text_mal_IN.properties
@@ -27,3 +27,15 @@ signup=സൈൻ അപ്പ്
 next=അടുത്തത്
 qns=ചോദ്യം വിജയകരമായി ചേർത്തു
 dts=ചോദ്യം വിജയകരമായി ഇല്ലാതാക്കി
+ns1=നൽകിയ ഉപയോക്തൃനാമം ഇതിനകം നിലവിലുണ്ട്
+ns2=ദയവായി മറ്റൊന്ന് പരീക്ഷിക്കുക
+i1=ചുവടെയുള്ള നിർദ്ദേശങ്ങൾ വായിക്കുക
+i2=പരീക്ഷ പൂർത്തിയാക്കാൻ നിങ്ങൾക്ക് 10 മിനിറ്റ് ലഭിക്കും
+i3=ഇൻവിജിലേറ്ററിന്റെ അനുമതിയില്ലാതെ മൊബൈൽ ഫോൺ ഉപയോഗിക്കരുത്
+i4=ചോദ്യങ്ങൾ ശ്രദ്ധാപൂർവ്വം വായിച്ച് ചുവടെ നൽകിയിരിക്കുന്ന ഉത്തരം തിരഞ്ഞെടുക്കുക
+i5=ഇൻ‌വിജിലേറ്ററിൽ‌ നിന്നും നിങ്ങൾ‌ക്ക് താൽ‌പ്പര്യമുള്ളത്ര പേപ്പറുകൾ‌ ചോദിക്കാൻ‌ കഴിയും
+i6=ഏതെങ്കിലും ദുരുപയോഗം ഡീബാറിലേക്ക് നയിക്കും
+time=ശേഷിക്കുന്ന നിമിഷങ്ങൾ
+r1=നിങ്ങൾ മോക്ക് പരീക്ഷ വിജയകരമായി പൂർത്തിയാക്കി
+r2=നിങ്ങളുടെ സ്കോർ
+r3=ഒരു നല്ല ദിനം ആശംസിക്കുന്നു
